<resources>
    <string name="app_name">pertemuan8_tugas</string>
    <string name="alamat">Alamat :</string>
    <string name="jln_barata_jaya_no_34_ngagel">Jln Barata Jaya No 34, Ngagel</string>
    <string name="harga">Harga :</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enimad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="_15000">15000</string>
    <string name="iv_detail_gambarjajanan">iv_detail_gambarjajanan</string>
    <string name="judul_jajanan">Judul Jajanan</string>
    <string name="_100000">100000</string>
    <string name="iv_gambarjajanan">iv_gambarjajanan</string>
    <string name="nama_makanan_kekinian">Nama Makanan Kekinian</string>
</resources>